deploy/k8s/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hotels
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: hotels
    spec:
      containers:
      - name: hotels
        image: smarthotels/hotels
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bookings
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: bookings
    spec:
      containers:
      - name: bookings
        image: smarthotels/bookings
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: suggestions
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: suggestions
    spec:
      containers:
      - name: suggestions
        image: smarthotels/suggestions
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: config
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: config
    spec:
      containers:
      - name: config
        image: smarthotels/configuration
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: customcfg
          mountPath: /app/cfg/custom.json
          subPath: custom.json
      volumes:
      - name: customcfg
        configMap:
          name: discovery-file
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tasks
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: tasks
    spec:
      containers:
      - name: tasks
        image: smarthotels/tasks
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notifications
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: notifications
    spec:
      containers:
      - name: notifications
        image: smarthotels/notifications
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: reviews
    spec:
      containers:
      - name: reviews
        image: smarthotels/reviews
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discounts
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: discounts
    spec:
      containers:
      - name: discounts
        image: smarthotels/discounts
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: profiles
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: profiles
    spec:
      containers:
      - name: profiles
        image: smarthotels/profiles
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: promotions
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotels
        component: promotions
    spec:
      containers:
      - name: promotions
        image: smarthotels/promotions
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
